--- a/ProjectManagment/Application/Application.csproj
+++ b/ProjectManagment/Application/Application.csproj
@@ -11,10 +11,11 @@
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+      <PackageReference Include="Optional" Version="4.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Common\Interfaces\" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 </Project>
